ratings-api-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:

  name: ratings-api

spec:

  selector:

    matchLabels:

      app: ratings-api

  template:

    metadata:

      labels:

        app: ratings-api # the label for the pods and the deployments

    spec:

      containers:

      - name: ratings-api

        image: acr12002.azurecr.io/ratings-api:v1 # IMPORTANT: update with your own repository

        imagePullPolicy: Always

        ports:

        - containerPort: 3000 # the application listens to this port

        resources:

          requests: # minimum resources required

            cpu: 1000m

            memory: 64Mi

          limits: # maximum resources allocated

            cpu: 1000m

            memory: 256Mi

        readinessProbe: # is the container ready to receive traffic?

          httpGet:

            port: 3000

            path: /healthz

        livenessProbe: # is the container healthy?

          httpGet:

            port: 3000

            path: /healthz
