ratings-web-service.yaml
apiVersion: v1

kind: Service

metadata:

  name: ratings-web

spec:

  selector:

    app: ratings-web

  ports:

  - protocol: TCP

    port: 80

    targetPort: 8080

  type: ClusterIP
