ratings-web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1

kind: Ingress

metadata:

  name: ratings-web-ingress

  annotations:

    kubernetes.io/ingress.class: nginx

spec:

  rules:

  - host: frontend.52-146-60-241.nip.io # IMPORTANT: update <ingress ip> with the dashed public IP of your ingress, for example frontend.13-68-177-68.nip.io

    http:

      paths:

      - backend:

          serviceName: ratings-web

          servicePort: 80

        path: /
